fixed img size, fixed img spacing, added music sec

--- a/assets/stylesheets/works.css
+++ b/assets/stylesheets/works.css
@@ -25,13 +25,6 @@ body.dark-mode {
   align-items: center;
 }
 
-.developer,
-.creator {
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-}
-
 hr {
   margin: 0 auto; /* needed to keep the hr aligned */
   width: 90%;
@@ -48,27 +41,36 @@ hr.developed::after {
   transition: background-color 0.5s ease;
   background-color: #ffffff;
   color: #4e54c8;
-  content: 'Developed Projects';
   padding: 0 4px;
   position: relative;
   top: -13px;
+  content: 'Developed Projects';
 }
 
 hr.created::after {
   transition: background-color 0.5s ease;
   background-color: #ffffff;
   color: #4e54c8;
-  content: 'Pixel Arts';
   padding: 0 4px;
   position: relative;
   top: -13px;
+  content: 'Pixel Arts';
+}
+
+hr.songs::after {
+  transition: background-color 0.5s ease;
+  background-color: #ffffff;
+  color: #4e54c8;
+  padding: 0 4px;
+  position: relative;
+  top: -13px;
+  content: 'Music Made';
 }
 
 .dark-mode hr::after {
   background-color: black;
 }
 
-.content,
 .content {
   display: flex;
   flex-wrap: wrap;
@@ -76,7 +78,6 @@ hr.created::after {
   justify-content: center;
 }
 
-.content img,
 .content img {
   border-radius: 12px;
   transition: transform 0.3s ease-in-out;
@@ -99,7 +100,8 @@ hr.created::after {
 .card2 {
   border-radius: 12px;
   width: 10%;
-  height: 300px;
+  height: auto;
+  margin: 10px;
 }
 
 @media (min-width: 768px) {
